crates/ynz-parser/tests/snapshots/lex__m1_token_stream.snap
---
source: crates/ynz-parser/tests/lex.rs
expression: tokens
---
[
    Function,
    Identifier(
        "main",
    ),
    LParen,
    RParen,
    Arrow,
    Nothing,
    LBrace,
    Identifier(
        "print",
    ),
    LParen,
    BacktickString(
        [
            104,
            101,
            108,
            108,
            111,
            44,
            32,
            121,
            105,
            110,
            122,
        ],
    ),
    RParen,
    RBrace,
    Eof,
]
