crates/ynz-parser/tests/snapshots/lex__m2_token_stream.snap
---
source: crates/ynz-parser/tests/lex.rs
expression: tokens
---
[
    Function,
    Identifier(
        "main",
    ),
    LParen,
    RParen,
    Arrow,
    Nothing,
    LBrace,
    Let,
    Identifier(
        "price",
    ),
    Eq,
    NumberLit(
        "0.1",
    ),
    Plus,
    NumberLit(
        "0.2",
    ),
    Let,
    Identifier(
        "count",
    ),
    Colon,
    Identifier(
        "int",
    ),
    Eq,
    IntLit(
        42,
    ),
    Let,
    Identifier(
        "active",
    ),
    Eq,
    True,
    Identifier(
        "print",
    ),
    LParen,
    Identifier(
        "price",
    ),
    RParen,
    Identifier(
        "print",
    ),
    LParen,
    Identifier(
        "count",
    ),
    Star,
    Identifier(
        "count",
    ),
    Minus,
    IntLit(
        1,
    ),
    RParen,
    Identifier(
        "print",
    ),
    LParen,
    Identifier(
        "active",
    ),
    AmpAmp,
    LParen,
    Identifier(
        "count",
    ),
    Gt,
    IntLit(
        0,
    ),
    RParen,
    RParen,
    RBrace,
    Eof,
]
