crates/ynz-parser/tests/snapshots/lex__m3_token_stream.snap
---
source: crates/ynz-parser/tests/lex.rs
expression: tokens
---
[
    Function,
    Identifier(
        "fib",
    ),
    LParen,
    Identifier(
        "n",
    ),
    Colon,
    Identifier(
        "int",
    ),
    RParen,
    Arrow,
    Identifier(
        "int",
    ),
    LBrace,
    If,
    LParen,
    Identifier(
        "n",
    ),
    Lt,
    IntLit(
        2,
    ),
    RParen,
    LBrace,
    Return,
    Identifier(
        "n",
    ),
    RBrace,
    Return,
    Identifier(
        "fib",
    ),
    LParen,
    Identifier(
        "n",
    ),
    Minus,
    IntLit(
        1,
    ),
    RParen,
    Plus,
    Identifier(
        "fib",
    ),
    LParen,
    Identifier(
        "n",
    ),
    Minus,
    IntLit(
        2,
    ),
    RParen,
    RBrace,
    Function,
    Identifier(
        "main",
    ),
    LParen,
    RParen,
    Arrow,
    Nothing,
    LBrace,
    Let,
    Identifier(
        "result",
    ),
    Eq,
    Identifier(
        "fib",
    ),
    LParen,
    IntLit(
        10,
    ),
    RParen,
    While,
    LParen,
    Identifier(
        "result",
    ),
    Gt,
    IntLit(
        0,
    ),
    RParen,
    LBrace,
    Identifier(
        "result",
    ),
    Eq,
    Identifier(
        "result",
    ),
    Minus,
    IntLit(
        1,
    ),
    RBrace,
    For,
    LParen,
    Identifier(
        "i",
    ),
    In,
    Identifier(
        "range",
    ),
    LParen,
    IntLit(
        0,
    ),
    Comma,
    IntLit(
        5,
    ),
    RParen,
    RParen,
    LBrace,
    If,
    LParen,
    Identifier(
        "i",
    ),
    RParen,
    LBrace,
    IntLit(
        0,
    ),
    FatArrow,
    Identifier(
        "print",
    ),
    LParen,
    BacktickString(
        [
            122,
            101,
            114,
            111,
        ],
    ),
    RParen,
    Else,
    FatArrow,
    Identifier(
        "print",
    ),
    LParen,
    BacktickString(
        [
            110,
            111,
            110,
            122,
            101,
            114,
            111,
        ],
    ),
    RParen,
    RBrace,
    RBrace,
    RBrace,
    Eof,
]
