crates/ynz-parser/tests/snapshots/lex__m4_token_stream.snap
---
source: crates/ynz-parser/tests/lex.rs
expression: tokens
---
[
    Base,
    Shape,
    Identifier(
        "Entity",
    ),
    LBrace,
    Identifier(
        "name",
    ),
    Colon,
    Identifier(
        "string",
    ),
    RBrace,
    Shape,
    Identifier(
        "Player",
    ),
    Extends,
    Identifier(
        "Entity",
    ),
    Follows,
    Identifier(
        "Damageable",
    ),
    LBrace,
    Hidden,
    Identifier(
        "cache",
    ),
    Colon,
    Identifier(
        "int",
    ),
    RBrace,
    Function,
    Identifier(
        "greet",
    ),
    LParen,
    Identifier(
        "share",
    ),
    SelfValue,
    Colon,
    Identifier(
        "Player",
    ),
    RParen,
    Arrow,
    Identifier(
        "string",
    ),
    LBrace,
    Return,
    SelfValue,
    Dot,
    Identifier(
        "name",
    ),
    RBrace,
    Function,
    Identifier(
        "example",
    ),
    LParen,
    RParen,
    Arrow,
    Nothing,
    LBrace,
    Let,
    Identifier(
        "p",
    ),
    Colon,
    Identifier(
        "Player",
    ),
    Eq,
    LBrace,
    Identifier(
        "name",
    ),
    Colon,
    BacktickString(
        [
            80,
            97,
            116,
            114,
            105,
            99,
            107,
        ],
    ),
    Comma,
    Identifier(
        "cache",
    ),
    Colon,
    IntLit(
        0,
    ),
    RBrace,
    Let,
    Identifier(
        "d",
    ),
    Colon,
    Dynamic,
    Identifier(
        "Damageable",
    ),
    Eq,
    Identifier(
        "p",
    ),
    Identifier(
        "print",
    ),
    LParen,
    Identifier(
        "greet",
    ),
    LParen,
    Identifier(
        "p",
    ),
    RParen,
    RParen,
    RBrace,
    Eof,
]
